added the test coverage check in test stage